new changes to style

--- a/index.html
+++ b/index.html
@@ -47,9 +47,34 @@
           </div>
       </div>
     </div>
-    <button id="setButton">Set Time</button>
+    <!-- <button id="setButton">Set Time</button>
     <label for="minutesInput">Minutes:</label>
-    <input type="number" id="minutesInput" min="0" max="180" step="5" />
+    <input type="number" id="minutesInput" min="0" max="180" step="5" /> -->
+
+    <div id = "shop-container">
+      <div id = "tree-item">
+        <p class = "cost">10 coins</p>
+        <p class = "name">Tree</p>
+      </div>
+      <div id = "rock-item">
+        <p class = "cost">10 coins</p>
+        <p class = "name">Rock</p>
+      </div>
+      <div id = "house-item">
+        <p class = "cost">10 coins</p>
+        <p class = "name">House</p>
+      </div>
+      <div id = "flower-item">
+        <p class = "cost">10 coins</p>
+        <p class = "name">Flower</p>
+      </div>
+      <div id = "path-item">
+        <p class = "cost">10 coins</p>
+        <p class = "name">Path</p>
+      </div>
+
+      </div>
+    </div>
    
  
   </body>
