shop changes + index script

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type = "module" src="garden.js"></script>
     <script type="module" src="timer.js"></script>
     <script type="module" src="grid.js"></script>
+    <script type="module" src="shop.js"></script>
   </head>
   <body>
     
@@ -47,9 +48,9 @@
           </div>
       </div>
     </div>
-    <!-- <button id="setButton">Set Time</button>
+    <button id="setButton">Set Time</button>
     <label for="minutesInput">Minutes:</label>
-    <input type="number" id="minutesInput" min="0" max="180" step="5" /> -->
+    <input type="number" id="minutesInput" min="0" max="180" step="5" />
 
     <div id = "shop-container">
       <div id = "tree-item">
