various changes in style

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
   
         <div id = "button-container">
+          <button id="coinDisplay">$0</button>
           <button id="shopButton">shop</button>
           <button id="invButton">storage</button>
           <button id="settingsButton">
@@ -55,7 +56,7 @@
         </div>
         <div id = "input-container"> 
           <button id="setButton">set time</button>
-          <input placeholder = "Minutes:" type="number" id="minutesInput" min="0" max="180" step="5" />
+          <input placeholder = "minutes:" type="number" id="minutesInput" min="0" max="180" step="5" />
         </div>
        
         
@@ -82,6 +83,30 @@
       </div>
       <div id = "path-item">
         <p class = "cost">10 coins</p>
+        <p class = "name">Path</p>
+      </div>
+
+      </div>
+    </div>
+    <div id = "storage-container">
+      <div id = "tree-storage">
+        <p class = "cost">x10</p>
+        <p class = "name">Tree</p>
+      </div>
+      <div id = "rock-storage">
+        <p class = "cost">x10</p>
+        <p class = "name">Rock</p>
+      </div>
+      <div id = "house-storage">
+        <p class = "cost">x10</p>
+        <p class = "name">House</p>
+      </div>
+      <div id = "flower-storage">
+        <p class = "cost">x10</p>
+        <p class = "name">Flower</p>
+      </div>
+      <div id = "path-storage">
+        <p class = "cost">x10</p>
         <p class = "name">Path</p>
       </div>
 
