--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div id = "layout">
         <div id =  "logo-container">
           <p id="title">niwagarden</p>
+          <img id = "pic" src="flowerpic.png" alt="flower">
         </div>
   
         <div id = "button-container">
